// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> opens the dropdown when clicked 1`] = `
<DropdownContainer
  onClick={[Function]}
  onClickAway={[Function]}
>
  <Flex
    align="center"
    justify="space-between"
  >
    None selected
    <Icon
      color="#FFFFFF"
      name="arrow-drop-up"
      size={24}
    />
  </Flex>
  <DropdownMenu
    show={true}
  >
    <Option
      isActive={false}
      key="0"
      onClick={[Function]}
    >
      Option 1
    </Option>
    <Option
      isActive={false}
      key="1"
      onClick={[Function]}
    >
      Option 2
    </Option>
  </DropdownMenu>
</DropdownContainer>
`;

exports[`<Dropdown /> opens the dropdown when clicked 2`] = `
<DropdownContainer
  onClick={[Function]}
  onClickAway={[Function]}
>
  <Flex
    align="center"
    justify="space-between"
  >
    None selected
    <Icon
      color="#FFFFFF"
      name="arrow-drop-down"
      size={24}
    />
  </Flex>
  <DropdownMenu
    show={false}
  >
    <Option
      isActive={false}
      key="0"
      onClick={[Function]}
    >
      Option 1
    </Option>
    <Option
      isActive={false}
      key="1"
      onClick={[Function]}
    >
      Option 2
    </Option>
  </DropdownMenu>
</DropdownContainer>
`;

exports[`<Dropdown /> renders correctly with a selected item 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  position: relative;
  cursor: pointer;
}

.c0:-webkit-autofill {
  -webkit-animation-name: none;
  animation-name: none;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c0::-webkit-input-placeholder {
  color: #999999;
}

.c0::-moz-placeholder {
  color: #999999;
}

.c0:-ms-input-placeholder {
  color: #999999;
}

.c0::placeholder {
  color: #999999;
}

.c2 {
  position: absolute;
  width: 100%;
  top: calc(100% + 8px);
  z-index: 10;
  border: 1px solid #EEEEEE;
  box-shadow: 0 20px 20px rgba(0,0,0,0.06);
  -webkit-transition: 0.1s ease-in-out all;
  transition: 0.1s ease-in-out all;
  opacity: 0;
  -webkit-transform: translateY(20px);
  -ms-transform: translateY(20px);
  transform: translateY(20px);
  visibility: hidden;
}

.c4 {
  padding: 12px 16px;
  background-color: #FFFFFF;
  -webkit-transition: 0.1s ease-in-out all;
  transition: 0.1s ease-in-out all;
  color: #070707;
}

.c4:not(:last-child) {
  border-bottom: 1px solid #EEEEEE;
}

.c4:hover {
  cursor: pointer;
  background-color: #f2f2f2;
}

.c3 {
  padding: 12px 16px;
  background-color: #f2f2f2;
  -webkit-transition: 0.1s ease-in-out all;
  transition: 0.1s ease-in-out all;
  color: #070707;
}

.c3:not(:last-child) {
  border-bottom: 1px solid #EEEEEE;
}

.c3:hover {
  cursor: default;
  background-color: #f2f2f2;
}

<div>
  <div
    className="c0"
    onClick={[Function]}
  >
    <div
      className="c1"
    >
      <div>
        Option 1
      </div>
      <div
        className=""
      >
        <svg
          fill="#FFFFFF"
          height="24px"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
        onClick={[Function]}
      >
        Option 1
      </div>
      <div
        className="c4"
        onClick={[Function]}
      >
        Option 2
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> renders correctly with none selected 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  position: relative;
  cursor: pointer;
}

.c0:-webkit-autofill {
  -webkit-animation-name: none;
  animation-name: none;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c0::-webkit-input-placeholder {
  color: #999999;
}

.c0::-moz-placeholder {
  color: #999999;
}

.c0:-ms-input-placeholder {
  color: #999999;
}

.c0::placeholder {
  color: #999999;
}

.c2 {
  position: absolute;
  width: 100%;
  top: calc(100% + 8px);
  z-index: 10;
  border: 1px solid #EEEEEE;
  box-shadow: 0 20px 20px rgba(0,0,0,0.06);
  -webkit-transition: 0.1s ease-in-out all;
  transition: 0.1s ease-in-out all;
  opacity: 0;
  -webkit-transform: translateY(20px);
  -ms-transform: translateY(20px);
  transform: translateY(20px);
  visibility: hidden;
}

.c3 {
  padding: 12px 16px;
  background-color: #FFFFFF;
  -webkit-transition: 0.1s ease-in-out all;
  transition: 0.1s ease-in-out all;
  color: #070707;
}

.c3:not(:last-child) {
  border-bottom: 1px solid #EEEEEE;
}

.c3:hover {
  cursor: pointer;
  background-color: #f2f2f2;
}

<div>
  <div
    className="c0"
    onClick={[Function]}
  >
    <div
      className="c1"
    >
      None selected
      <div
        className=""
      >
        <svg
          fill="#FFFFFF"
          height="24px"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
        onClick={[Function]}
      >
        Option 1
      </div>
      <div
        className="c3"
        onClick={[Function]}
      >
        Option 2
      </div>
    </div>
  </div>
</div>
`;
